# energyflag

./: .gitignore  README.md
.github/workflows/: release.yml
installer/: EnergyFlag.iss
rs/: Cargo.toml  app.rc  build.rs
rs/.cargo/: config.toml
rs/src/: main.rs
tools/: make_logo.ps1
