[package]
name = "energyflag"
version = "0.2.0"
edition = "2021"
description = "Windows power-plan profile switcher (Remote or On-Site), tray-only"
build = "build.rs"

[[bin]]
name = "EnergyFlag"
path = "src/main.rs"

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Com_Urlmon",
    "Win32_Security",
]

[dependencies.windows-core]
version = "0.58"
